# MLOPS-GCP-Hotel

./: .gitignore  main.py  pyproject.toml
artifacts/models/: lgbm_model.joblib
artifacts/processed/: preprocessor.joblib  xtest.npy  xtrain.npy  ytest.npy  ytrain.npy
config/: config.yaml  model_params.py  paths_config.py
notebook/: notebook.ipynb  pre.joblib
src/: custom_exception.py  data_ingestion.py  data_preprocessing.py  logger.py  model_training.py
utils/: common_functions.py
